--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GHR Notes</title>
-
-    <link rel="stylesheet" href="CSS/Home_Desk.css">
-    <link rel="stylesheet" href="CSS/Home_Phn.css">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5519423286822195"
-     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NB864W32K1"></script>
 <script>
@@ -19,6 +10,14 @@
 
   gtag('config', 'G-NB864W32K1');
 </script>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GHR Notes</title>
+
+    <link rel="stylesheet" href="CSS/Home_Desk.css">
+    <link rel="stylesheet" href="CSS/Home_Phn.css">
+
 </head>
 <body>
     <div class="container">
@@ -40,7 +39,7 @@
                     <div class="navlink">Explore Our Blogs</div>
                     <div class="connectusPC">
                             Connect With Us >>
-                            <a href="Mailto:NexusFusionTrio.NFT@Gmail.Com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            <a href="Mailto:WebTechFusion.NFT@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                             <!-- <a href="instagram.com"><i class="fa fa-linkedin" aria-hidden="true"></i></a> -->
                             <a href="https://api.whatsapp.com/send?phone=8625987413"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                             <a href="https://www.instagram.com/webtechfusion/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -53,7 +52,7 @@
                     <div class="navlink">Blogs</div>
                     <div class="connectusPHN">
 
-                            <a href="Mailto:NexusFusionTrio.NFT@Gmail.Com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            <a href="Mailto:WebTechFusion.NFT@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                             <!-- <a href="instagram.com"><i class="fa fa-linkedin" aria-hidden="true"></i></a> -->
                             <a href="https://www.instagram.com/webtechfusion/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                             <a href="https://api.whatsapp.com/send?phone=8625987413"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
@@ -81,7 +80,7 @@
                      </div>
                 </a>
 
-            </article>
+            <!-- </article>
             <article>
                 <div class="card SY">
                      <div class="cardimg">
@@ -126,7 +125,7 @@
                      </div>
 
                 </div>
-            </article>
+            </article> -->
             
         </section>
         </main>
